@@ -1,3 +1,12 @@
+2005-03-05 23:06  patthoyts
+
+	* jim.c: Free an objects internal representation before freeing the
+	  string rep.
+
+2005-03-05 22:11  antirez
+
+	* ChangeLog, jim-aio.c: more AIO file methods.
+
 2005-03-05 19:51  antirez
 
 	* ChangeLog, jim-aio.c: ANSI I/O seek method implemented.
